--- a/db/json2/goodmoves/layouts/default.hbs
+++ b/db/json2/goodmoves/layouts/default.hbs
@@ -59,13 +59,17 @@
         console.log('Menus:', {{{regexReplace (regexReplace (stringify context.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
         {{/if ~}}
     </script>
-    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
+    {{#if (contains request.url.host '.local')}}
+        <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.css">
+    {{else}}
+        <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.min.css">
+    {{/if}}
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/goodmoves-styles.css">
     <script>
-    if(location.host === 'scvo.local'){
+    if(location.host.indexOf('.local') > -1){
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    }
+    } 
     </script>
 </head>
 <body class="mdc-theme--site-bg {{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
@@ -234,7 +238,12 @@
         </div>
     </scvo-site>
 
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    {{#if (contains request.url.host '.local')}}
+        <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.js"></script>
+    {{else}}
+        <script type="text/javascript" src="https://unpkg.com/material-components-web@0.32.0/dist/material-components-web.min.js"></script>
+    {{/if}}
     <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript" src="/assets/js/swiper.min.js"></script>
     <script type="text/javascript" id="cookieinfo"
