--- a/db/json2/goodmoves/templates/pages/home.hbs
+++ b/db/json2/goodmoves/templates/pages/home.hbs
@@ -4,14 +4,15 @@
             <h3>Find you new job?</h3>
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-                        <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="What are you looking for" id="what" name="what">
+                    <div id="tt-what" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                        <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute typeahead" placeholder="What are you looking for" id="what" name="what">
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                         <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Where are you looking" id="where" name="where">
                     </div>
                 </div>
             </div>
+            <div id="search-terms" class="mdc-chip-set"></div>
             <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                 <span class="far fa-2x fa-search" aria-hidden="true"></span>
             </button>
@@ -19,7 +20,3 @@
     </div>
 </section>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
-<script>
-    
-</script>
