--- a/db/json2/scvo/partials/sidebar-cjs-search.hbs
+++ b/db/json2/scvo/partials/sidebar-cjs-search.hbs
@@ -56,7 +56,7 @@
             <option value="resource-development" {{#compare request.params.query.sector "===" "resource-development"}}selected{{/compare}}>Resource Development</option>
             <!-- {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
             {{#if key}}
-            <option value="{{key}}" {{#compare ../params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
+            <option value="{{key}}" {{#compare ../request.params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
             {{/if}}
             {{/each}} -->
         </select>
@@ -99,7 +99,7 @@
             <option value="western-isles" {{#compare request.params.query.region "===" "western-isles"}}selected{{/compare}}>Western Isles</option>
             <!-- {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
             {{#if key}}
-            <option value="{{key}}" {{#compare ../params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
+            <option value="{{key}}" {{#compare ../request.params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
             {{/if}}
             {{/each}} -->
         </select>
