--- a/db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -142,7 +142,7 @@
                                     {{> sector_result_count input="resource-development"}}
                                     <!-- {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
                                     {{#if key ~}}
-                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?sector={{key}}">{{key}}</a><br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../request.params.phase}}?sector={{key}}">{{key}}</a><br />
                                     {{/if ~}}
                                     {{/each ~}} -->
                                 </div>
@@ -223,7 +223,7 @@
                                     {{> region_result_count input="western-isles"}}
                                     <!-- {{#each data.supplimentaryResponses.types.aggregations.regions.buckets ~}}
                                     {{#if key ~}}
-                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?region={{key}}">{{key}}</a><br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../request.params.phase}}?region={{key}}">{{key}}</a><br />
                                     {{/if ~}}
                                     {{/each ~}} -->
                                 </div>
