--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1340,6 +1340,12 @@ section.search {
         margin-top: 0;
     }
 }
+.post-related-tfn {
+    .gist {
+        padding: 0;
+    }
+}
+
 .jobs-landing {
     .page-content {
         .mdc-layout-grid__inner {
