--- a/db/json2/scvo/templates/grants/grant-cyber-search.hbs
+++ b/db/json2/scvo/templates/grants/grant-cyber-search.hbs
@@ -1,5 +1,5 @@
 <div class="search grant-search grant-cyber-search">
-    <div class="splash-image splash-image-{{data.primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
+    <div class="splash-image splash-image-{{data.primaryResponse.hits.hits.[0]._type}}-search" style="{{> header_splash_image}}">
         <div class="splash-overlay{{#if data.primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
