Beginnings of input tag search with map

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -132,6 +132,12 @@ a:hover,
     color: #ffffff;
 }
 
+/* Maps */
+#map-full {
+    height: 200px;
+    width: 100%;
+}
+
 html {
     overflow-y: scroll;
     height: 100%;
