Updates to CU that I should have done on Friday

--- a/db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
+++ b/db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
@@ -6,6 +6,9 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     <div class="full scvo-cms scvo-cms-page">
+                        <p>
+                            Loan example is  a standard loan at 1%  (APR 12.68 %)
+                        </p>
                         <form class="form-horizontal loan-form" name="loanDetails" id="loanDetails" _lpchecked="1">
                             <div class="control-group">
                                 <label class="control-label">
@@ -59,6 +62,61 @@
                                 </ul>
                             </div>
                         </form>
+                        <h2>Loan products and examples:</h2>
+                        <table border="1" cellspacing="0" cellpadding="4">
+                            <thead>
+                                <tr>
+                                    <th><strong>Loans  Products</strong></th>
+                                    <th><strong>Amount</strong></th>
+                                    <th><strong>APR</strong></th>
+                                    <th><strong>Period</strong></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Standard Loans</td>
+                                    <td>£100.00    to   £4,999</td>
+                                    <td>1%     (12.68% APR)</td>
+                                    <td>Maximum 3 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Standard Loans</td>
+                                    <td>£5,000      to   £6,999</td>
+                                    <td>1%      (12.68% APR)</td>
+                                    <td>Maximum 5 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Refinanced Loans</td>
+                                    <td>£100.00    to   £7,000</td>
+                                    <td>1.5%  (19.56% APR)</td>
+                                    <td>Maximum 5 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Loyalty Loan</td>
+                                    <td>£7,000      to   £9,999</td>
+                                    <td>0.9.38   (9.38% APR)</td>
+                                    <td>Maximum  5 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Loyalty Loan Plus</td>
+                                    <td>£10,000    to   £15,000</td>
+                                    <td>0.6%     (6.17% APR)</td>
+                                    <td>Maximum  5 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Budgeting Loan</td>
+                                    <td>£100.00    to  £1,500</td>
+                                    <td>2%     (26.82% APR)</td>
+                                    <td>Maximum  5 years</td>
+                                </tr>
+                                <tr>
+                                    <td>Starter Loan</td>
+                                    <td>£25.00      to   £500.00</td>
+                                    <td>2%     (26.82% APR)</td>
+                                    <td>Maximum  5 years</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone content sidebar page-sidebar">
