--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -59,7 +59,7 @@
         console.log('Menus:', {{{regexReplace (regexReplace (stringify context.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
         {{/if ~}}
     </script>
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
     <script>
@@ -77,7 +77,7 @@
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-start">
                             <span class="mdc-toolbar__title catalog-title">
                                 <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                    <img src="https://storage.googleapis.com/scvo-assets/scvo-assets/assets/images/scvo-logo.png" />
+                                    <img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" />
                                 </a>
                             </span>
                         </section>
@@ -130,7 +130,7 @@
                 <nav class="mdc-temporary-drawer__drawer">
                     <header class="mdc-temporary-drawer__header">
                         <div class="mdc-temporary-drawer__header-content mdc-theme--primary-bg">
-                            <img src="https://storage.googleapis.com/scvo-assets/scvo-assets/assets/images/scvo-logo.png" />
+                            <img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" />
                         </div>
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
@@ -241,7 +241,7 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                                     <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                        <img src="https://storage.googleapis.com/scvo-assets/scvo-assets/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" />
+                                        <img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" />
                                     </a>
                                 </div>
                             </div>
