--- a/db/json2/scvo/templates/pages/page-digital.hbs
+++ b/db/json2/scvo/templates/pages/page-digital.hbs
@@ -169,7 +169,7 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://storage.googleapis.com/scvo-cms/scvo-cms/wp-content/uploads/2016/10/scvo_digital_senior_leaders_call_to_action_final.pdf">Read the Call to Action</a> (PDF)</li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://storage.googleapis.com/scvo-cms/scvo-cms/wp-content/uploads/2016/10/scvo_digital_senior_leaders_call_to_action_final.pdf">Read the Call to Action</a></li>
                                 </ul>
                             </section>
                         </div>
