Settled status guide

--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -577,6 +577,9 @@ primary-dark: #251032
     .community-jobs-scotland .callout-image.benefit {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/newcjsbanner.jpg');
     }
+    #settled_status_guide {
+        background-color: map-get($themeDefault, 'primary-dark') !important;
+    }
     .policy-research .callout-image {
         background-image: linear-gradient(
         map-get($themeDefault, 'primary-overlay-start'),
@@ -1401,6 +1404,25 @@ section.search {
     }
 }
 
+form#settled_status {
+    label {
+        vertical-align: top;
+        padding-top: 0.55rem;
+        display: inline-block;
+    }
+}
+#settled_status_guide {
+    color: white;
+    font-size: 1.25rem;
+    padding: $unit*0.8 $unit;
+    margin-top: $unit/2;
+    border-radius: $unit/5;
+}
+#settled_status_guide,
+.guide_text {
+    display: none;
+}
+
 .mdc-form-field {
     font-size: 1rem;
 }
@@ -2150,6 +2172,7 @@ body.i-love-charity .page-info,
 .scvo-cms-page-20035 .page-info,
 .scvo-cms-page-20034 .page-info,
 .scvo-cms-page-20005 .page-info,
+.scvo-cms-page-24853 .page-info,
 .blogs .page-sidebar .page-info,
 .policy-research.briefings-consultation-responses .mdc-card__actions,
 .policy-research.research .mdc-card__actions,
