--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -48,7 +48,7 @@
                             <label id="answer-4-label" for="answer-4">Less than five years</label>
                         </p>
                         <h3>
-                            <strong>Q3.</strong> Do you have indefinite leave to remain status?
+                            <strong>Q3.</strong> Do you have <a href="https://www.gov.uk/settle-in-the-uk">indefinite leave to remain</a> status?
                         </h3>
                         <p>
                             <div class="mdc-radio"><input id="answer-5" class="mdc-radio__native-control" name="c" value="5" type="radio" onchange="window.displayGuide()" />
@@ -70,18 +70,18 @@
                     <div id="settled_status_guide">
                         <div class="guide_text" id="guide_135">
                             <p>
-                                Your ‘indefinite leave to remain’ status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new ‘settled status’ document, you will be able to do so free of charge.
+                                Your <a href="https://www.gov.uk/settle-in-the-uk">'indefinite leave to remain'</a> status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new 'settled status' document, you will be able to do so free of charge.
                             </p>
                         </div>
                         <div class="guide_text" id="guide_136">
                             <p>
-                                You will be able to apply to stay indefinitely by getting ‘settled status’. That means they will be free to live here, have access to public funds and services.
+                                You will be able to apply to stay indefinitely by getting 'settled status'. That means they will be free to live here, have access to public funds and services.
                             </p>
                             <p>
                                 Getting this status will prove (for example, to employers or public service providers) that you have permission to continue living and working here in future.
                             </p>
                             <p>
-                                The application fee will be no more than the cost charged to British citizens for a UK passport and the online process for application should be in place by late 2018. Sign up for email updates for more details.
+                                The application fee will be no more than the cost charged to British citizens for a UK passport and the online process for application should be in place by late 2018. <a href="https://gov.smartwebportal.co.uk/homeoffice/public/webform.asp?id=67&id2=627DF7">Sign up for email updates</a> for more details.
                             </p>
                             <p>
                                 Family members who are living with, or join, you in the UK by 29 March 2019 will also be able to apply for settled status after 5 years in the UK. Close family members (spouses, civil and unmarried partners, dependent children and grandchildren, and dependent parents and grandparents) will be able to join EU citizens after the UK leaves the EU, as long as the relationship existed on 29 March 2019.
@@ -89,7 +89,7 @@
                         </div>
                         <div class="guide_text" id="guide_145">
                             <p>
-                                Your ‘indefinite leave to remain’ status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new ‘settled status’ document, you will be able to do so free of charge.
+                                Your <a href="https://www.gov.uk/settle-in-the-uk">'indefinite leave to remain'</a> status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new 'settled status' document, you will be able to do so free of charge.
                             </p>
                         </div>
                         <div class="guide_text" id="guide_146">
@@ -97,7 +97,7 @@
                                 You will be able to apply to stay until they have reached the 5-year threshold.
                             </p>
                             <p>
-                                Once you have been in the UK for five years (continually and lawfully), you will be able to apply to stay indefinitely by getting ‘settled status’. That means they will be free to live here, have access to public funds and services.
+                                Once you have been in the UK for five years (continually and lawfully), you will be able to apply to stay indefinitely by getting 'settled status'. That means they will be free to live here, have access to public funds and services.
                             </p>
                             <p>
                                 Getting this status will prove (for example, to employers or public service providers) that you have permission to continue living and working here in future.
@@ -111,7 +111,7 @@
                         </div>
                         <div class="guide_text" id="guide_235">
                             <p>
-                                Your ‘indefinite leave to remain’ status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new ‘settled status’ document, you will be able to do so free of charge.
+                                Your <a href="https://www.gov.uk/settle-in-the-uk">'indefinite leave to remain'</a> status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new 'settled status' document, you will be able to do so free of charge.
                             </p>
                         </div>
                         <div class="guide_text" id="guide_236">
@@ -121,7 +121,7 @@
                         </div>
                         <div class="guide_text" id="guide_245">
                             <p>
-                                Your ‘indefinite leave to remain’ status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new ‘settled status’ document, you will be able to do so free of charge.
+                                Your <a href="https://www.gov.uk/settle-in-the-uk">'indefinite leave to remain'</a> status is not affected by the UK leaving the EU. However, should you wish to exchange your existing indefinite leave to remain document for the new 'settled status' document, you will be able to do so free of charge.
                             </p>
                         </div>
                         <div class="guide_text" id="guide_246">
