--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -1405,6 +1405,9 @@ section.search {
 }
 
 form#settled_status {
+    h3 {
+        font-weight: normal;
+    }
     label {
         vertical-align: top;
         padding-top: 0.55rem;
@@ -1417,6 +1420,9 @@ form#settled_status {
     padding: $unit*0.8 $unit;
     margin-top: $unit/2;
     border-radius: $unit/5;
+    a {
+        color: white;
+    }
 }
 #settled_status_guide,
 .guide_text {
