Changes for Sian

--- a/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/json2/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -29,7 +29,7 @@
                             <label id="answer-2-label" for="answer-2">After 29 March 2019</label>
                         </p>
                         <h3>
-                            <strong>Q2.</strong> How long have you (continually and lawfully) lived in the UK?
+                            <strong>Q2.</strong> How long have you lived in the UK?
                         </h3>
                         <p>
                             <div class="mdc-radio"><input id="answer-3" class="mdc-radio__native-control" name="b" value="3" type="radio" onchange="window.displayGuide()" />
